--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,17 @@
 /* No modificar */
 /* Estilos generales */
 
+/* Custom Properties */
+
+:root{
+    --color-primary: #FFCA40;
+    --color-secondary: #C8161D;
+    --black: #000000;
+    --gray:#808080;
+    --white: #F8F8F7;
+}
+
+/* Normalize */
 *, *:before, *:after {
     box-sizing: border-box;
 
@@ -9,7 +20,7 @@ body{
     font-family: 'Roboto', sans-serif;
     line-height: 1.5;
     color: #333;
-    background-color: #fff;
+    background-color: var(--white);
     margin: 0;
     padding: 0;
 }
@@ -24,3 +35,164 @@ a{
     text-decoration: none;
     color: #333;
 }
+
+/* Dashboard */
+.aside{
+    background-color: #fff;
+    color: #fff;
+    width: 310px;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 20px;
+    border-right: #8b898955 solid 1px;
+}
+.aside header{
+    display: flex;
+    justify-content: flex-start;
+    gap: 1rem;
+    align-items: center;
+    padding-left: 1rem;
+    color: var(--black);
+    font-weight: bold;
+}
+.aside-title-mod{
+    color: var(--color-secondary);
+}
+.nav-container{
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    /* height: 100%; */
+}
+.navbar{
+    margin-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: .1rem;
+    color: var(--gray);
+    padding-right: 35px;
+}
+.navbar .navbar-item{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1rem;
+    padding: .2rem .8rem;
+    background: transparent;
+    border-radius: 19px;
+    transition: background .4s ease-in-out;
+}
+.navbar .navbar-item img{
+    width: 20px;
+    height: 20px;
+    object-fit: cover;
+    object-position: top;
+}
+.nav-container .navbar-item:hover{
+    background: var(--color-primary);
+}
+.navbar a{
+    color: var(--black);
+    font-weight: bold;
+}
+.aside-profile{
+    background: #fff;
+    display: flex;
+    width: 80%;
+    margin: 0 auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 7px 8px -6px rgba(161,153,161,1);
+    border-radius: 2rem;
+    padding: 1rem;
+    color: var(--gray);
+}
+.aside-profile-img{
+    display: flex;
+    justify-content: center;
+}
+.aside-profile img{
+    border-radius: 100%;
+    width: 60px;
+    height: 60px;
+    object-fit: cover;
+    object-position: top;
+}
+.aside-profile h3{
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: var(--black);
+    margin: 1rem 0;
+}
+.btn{
+    display: block;
+    background-color: var(--white);
+    color: var(--black);
+    font-weight: 700;
+    width: 100%;
+    padding: .8rem 1.2rem;
+    border-radius: 10px;
+    transition: background .4s linear;
+    text-align: center;
+}
+.btn:hover{
+    background-color: var(--color-primary);
+}
+.copy{
+    color: var(--gray);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.container{
+    width: 100%;
+    min-height: 100vh;
+}
+.main-content{
+    padding-left: 310px;
+    padding-top: 20px;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+    overflow-y: auto;
+}
+.dashboard{
+    color: var(--gray);
+    padding: 5px;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+}
+.dashboard-content{
+    height: 100%;
+}
+.dashboard .dashboard-stats{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+    place-items: center;
+}
+.dashboard-stats div{
+    width: 300px;
+    height: 300px;
+    border-radius: 2rem;
+    padding: 1rem;
+    background:#fff;
+}
+
+/* Header */
+
+/* Profile */
+
+/* Settings */
+
+/* Bills */
+
+/* Login */
+
+/* Register */
