--- a/css/bills.scss
+++ b/css/bills.scss
@@ -3,12 +3,27 @@ $colorRojo:#c8161d;
 $simpleBlack:#000;
 $simpleGray:#808080;
 $simpleWhite:#F8f8f7;
-$fontFamily:"hola";
+$fontNormal:Gilroy;
+$fontBold:GilroyBold;
+$fontLight:GilroyLight;
+@font-face {
+  font-family:Gilroy;
+  src: url('../fuentes/Gilroy-Regular.ttf');
+}
+@font-face {
+  font-family:GilroyBold;
+  src: url('../fuentes/Gilroy-Bold.ttf');
+}
+@font-face {
+  font-family:GilroyLight;
+  src: url('../fuentes/Gilroy-Light.ttf');
+}
 
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Gilroy;
 }
 ul{
   list-style: none;
@@ -16,6 +31,11 @@ ul{
 a{
   text-decoration: none;
   color: inherit;
+}
+.mainApp{
+  display: flex;
+  position: relative;
+  overflow-x: hidden;
 }
 .menu{
   width: 300px;
@@ -39,7 +59,7 @@ a{
 }
 .nav{
   padding-top:40px ;
-  margin-bottom: 160px;
+  margin-bottom: 10px;
 }
 .nav-subMenu{
   color: $simpleGray;
@@ -102,14 +122,16 @@ a{
   padding-bottom: 10px;
 }
 .userInfo-name{
-  font-weight: bold;
+  font-family: $fontBold;
+  font-size: 20px;
 }
 .userInfo-subTitle{
-  font-weight: 200;
+  font-family: $fontLight;
   color: $simpleGray;
 }
 .userInfo-img-button{
-  width: 80%;
+  width: auto;
+  padding:0 20px;
   height: 50px;
   margin: 20px 0;
   background-color: #e5e1e170;
@@ -117,4 +139,219 @@ a{
   justify-content: center;
   align-items: center;
   border-radius: 10px;
+}
+.billContainer{
+  padding-top: 40px;
+  //background-color: #981b1b54;
+  width: 600px;
+  height: 100vh;
+}
+.billContainer-svg{
+  width: 24px;
+  height: 24px;
+}
+.billContainer-header{
+  width: 100%;
+  display: flex;
+  margin: 30px 0;
+  padding: 0 40px;
+  align-items: center;
+  justify-content: space-between;
+}
+.billContainer-title{
+  font-size: 36px;
+  font-family: $fontBold;
+}
+.billContainer-svgContainer{
+  width: 40px;
+  height: 40px;
+  background-color: #9a9a9cb7;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.billContainer-filter{
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  justify-content: center;
+}
+.billCards{
+  width: 100%;
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  overflow: auto;
+  padding-top:10px ;
+}
+.billCards::-webkit-scrollbar{
+  width:8px ;
+  height: 30px;
+}
+.billCards::-webkit-scrollbar-thumb{
+  background-color: $colorAmarillo;
+  border-radius: 10px;
+  width: 16px; /* Ancho del pulgarcito */
+  height: 16px; /* Altura del pulgarcito */
+ 
+}
+.bill-info{
+  width: 80%;
+  height: 90px;
+  border-radius: 10px;
+  //background-color: $simpleWhite;
+  transition: .3s ease-in-out;
+  box-shadow: 0px 1px 3px  #4c4c4c4f ;
+  display: grid;
+  grid-template-columns: 3fr .7fr;
+  grid-template-rows: repeat(2,40px);
+  justify-self: center;
+  align-items: center;
+  padding-top: 10px;
+  
+}
+.bill-info:hover{
+  cursor: pointer;
+  transform: scale(1.05);
+  box-shadow: -1px 3px 3px 1px hsla(0, 0%, 17%, 0.31) ;
+}
+.bill-area{
+ 
+  display: flex;
+  gap: 30px;
+  align-items: center;
+  margin: 0 0 0 20px;
+  
+}
+.bill-subarea{
+  
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.billSearchContainer{
+  width: 600px;
+  height: 100px;
+  
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+  //align-items: center;
+  //position: relative;
+  //bottom: 0;
+}
+.billSearchBar{
+  display: flex;
+  gap: 30px;
+  border-radius: 10px;
+  background-color: #c0bdbd8f;
+  width: 400px;
+  height: 50px;
+  justify-content: center;
+  align-items: center;
+  input{
+    width: 300px;
+    height: 40px;
+    border: none;
+    background-color: transparent;
+  }
+  input:focus{
+    border: 2px solid $colorAmarillo;
+    outline: none;
+    background-color: $simpleWhite;
+    border-radius: 10px;
+  }
+  svg{
+    padding-left: 10px;
+    width: 24px;
+    height: 24px;
+  }
+}
+.billDetails{
+  width: 600px;
+  background-color: #ededed;
+  height: 100vh;
+  //position: absolute;
+  right: 0;
+  transition: .5s ease-in-out;
+  z-index: 99;
+  padding-top: 30px;
+  box-shadow: -4px 3px 60px 3px hsla(0, 0%, 17%, 0.31) ;
+  opacity: 1;
+}
+.moveOut{
+  opacity: 0.3;
+  transform: translateX(600px);
+}
+
+
+.status{
+  width: 10px;
+  height: 10px;
+  border-radius:50% ;
+  margin-bottom: 2px;
+}
+.active{
+background-color: green;
+}
+.desiable{
+  background-color: rgb(170, 4, 4);
+  }
+  .detail{
+    background-color: $colorAmarillo;
+   min-width: 200px;
+  }
+.sm{
+  font-size: 12px;
+}
+.md{
+font-family: $fontNormal;
+font-weight: 500;
+}
+.lg{
+  font-size: 24px;
+  font-family: $fontBold;
+}
+.bill-data{
+  display: flex;
+  flex-direction: column;
+  padding-left: 20px;
+  gap: 20px;
+}
+.billDetails-info{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-template-rows: repeat(2,40px);
+  align-items: center;
+  justify-items: flex-start;
+}
+.bill-list{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.mainlist{
+  padding-right: 30px;
+  flex-direction: column;
+  gap: 10px;
+}
+.listdectail{
+  width: 200px;
+  //justify-content: center;
+  align-items:center ;
+}
+.row{
+  flex-direction: row;
+}
+.bill-img{
+  width: 40px;
+}
+.buttonDectail{
+  position: absolute;
+  bottom: 100px;
+  right: 110px;
 }
