logica de editar perfil desde la seccion

--- a/client/src/components/Dashboard/Dashboard.css
+++ b/client/src/components/Dashboard/Dashboard.css
@@ -110,6 +110,7 @@ a{
 }
 .nav-container .navbar-item:hover{
     background: var(--color-primary);
+    cursor: pointer;
 }
 .navbar a{
     color: var(--black);
