--- a/anterior-migrar/css/styles.css
+++ b/anterior-migrar/css/styles.css
@@ -103,6 +103,7 @@ a{
     border-radius: 19px;
     transition: background .4s ease-in-out;
 }
+
 .navbar .navbar-item img{
     width: 20px;
     height: 20px;
@@ -111,6 +112,7 @@ a{
 }
 .nav-container .navbar-item:hover{
     background: var(--color-primary);
+    cursor: pointer;
 }
 .navbar a{
     color: var(--black);
