--- a/client/src/components/Forms/style.css
+++ b/client/src/components/Forms/style.css
@@ -8,8 +8,10 @@ margin:5px;
 border-radius: 8px;
 width: 560px;
 height: 50px;
-background-color: #404040;
+background-color: #5d5d51;
 padding-left: 30px;
+color: #000;
+font-size: 24px;
 
 }
 .inputButton{
