--- a/client/src/components/Profile/index.scss
+++ b/client/src/components/Profile/index.scss
@@ -27,59 +27,59 @@ $fontLight:GilroyLight;
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin: 20px 0;
+  margin: 1.25em 0;
 }
 .profileContainer{
   
   display: flex;
   flex-direction: row;  
-  padding-left: 40px;
-  gap: 40px;
+  padding-left:  2.5em;
+  gap: 2.5em;
 }
 .sh{
-  height: 200px;
+  height: 12.5em;
 }
 .profileCard{
-  width: 400px;
-  height: 70vh;
+  width: 25em;
+  height: 60em;
   display: flex;
   flex-direction: column;
   //justify-content: center; 
-  border-radius: 20px;
+  border-radius:1.25em;
   align-items: center;
   position: relative;
-  box-shadow: 2px 10px 20px 1px #6c6c6c30;
+  box-shadow: 2px 10px 1.25em 1px #6c6c6c30;
 }
 .dt{
-  width: 700px;
+  width: 43.75em;
   align-items: normal;
-  padding-left: 40px;
-  padding-top: 60px;
+  padding-left: 2.5em;
+  padding-top: 3.75em;
 }
 .profileImgContainer{
   
-  padding-top: 40px;
+  padding-top: 2.5em;
 }
 .profileImg{
-  width: 260px;
-  height: 260px;
+  width: 16.25em;
+  height: 16.25em;
   
   border-radius: 50%;
 }
 .profileImgEdit{
-  width: 60px;
-  height: 60px;
+  width: 3.75em;
+  height: 3.75em;
   border-radius: 50%;
   background-color: $colorAmarillo;
   display: flex;
   justify-content: center;
   align-items: center;
   position: absolute;
-  top: 230px;
-  right: 80px;
+  top: 13.9em;
+  right: 5em;
   animation: .6s ease-in-out;
   img{
-    width: 40px;
+    width: 2.5em;
   }
 }
 .profileImgEdit:hover{
@@ -89,21 +89,21 @@ background-color: #ff7a10;
 
 
 .profile-title-lg  {
-  font-size: 26px;
+  font-size: 1.6em;
   font-family: $fontBold;
 }
 .profile-title  {
   color: #000;
-  font-size: 26px;
+  font-size: 1.5em;
   font-family: $fontBold;
 }
 .profile-subtitle{
   color: #000;
-  font-size: 20px;
+  font-size: 1.25em;
   font-family: $fontNormal
 }
 .profile-info{
-  margin: 10px 0;
+  margin: .6em 0;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -118,25 +118,25 @@ background-color: #ff7a10;
 }
 .profile-settings{
   display: flex;
-  width: 400px;
-  height: 40px;
+  width: 24em;
+  height: 2em;
   position: relative;
-  margin: 20px 0;
+  margin: 1.25em 0;
 }
 .profile-settings:hover{
   cursor: pointer;
 }
 .sm{
-  width: 40px;
-  height: 40px;
-  margin:0 30px;
+  width: 2.5em;
+  height: 2.5em;
+  margin:0 1.8em;
 }
 .profile-bar{
-  width: 5px;
+  width: .3em;
   height: 100%;
   background-color: $colorAmarillo;
   position: absolute;
-  border-radius: 20px;
+  border-radius: 1.25em;
   right: 3px;
 }
 .red{
@@ -146,40 +146,40 @@ background-color: #ff7a10;
   display: flex;
   width: 90%;
   justify-content: space-between;
-  margin: 20px 0;
+  margin: 1.25em 0;
 }
 .ProfileDectailpart{
-  width: 260px;
-  height: 40px;
-  margin-top: 10px;
+  width: 16.25em;
+  height: 2.5em;
+  margin-top: .7em;
   display: flex;
-  border-radius: 10px;
+  border-radius: .7em;
   background-color: #c6c4c4;
   align-items: center;
-  padding-left: 20px;
+  padding-left: 1.25em;
 
 }
 .profileCard-otherLinksContainer{
-  margin-top: 200px;
+  margin-top: 12.5em;
 }
 .password{
   
   display: flex;
   justify-content: space-between;
-  padding-right: 20px;
+  padding-right: 1.25em;
 }
 .passwordIcon{
-  width: 30px;
+  width: 1.8em;
 }
 .passwordIcon:hover{
  cursor: pointer;
 }
 .password-change{
   display: flex;
-  width: 260px;
-  gap: 10px;
+  width: 16.25em;
+  gap: 1.8em;
   align-items: center;
-  padding-top: 40px;
+  padding-top: 2.5em;
 }
 .password-change:hover{
   cursor: pointer;
@@ -188,24 +188,24 @@ background-color: #ff7a10;
 .profileCard-otherLinks{
   display: flex;
   justify-content: flex-start;
-  margin: 30px 0 120px -30px;
+  margin: 1.875em 0 7.5em -1.875em;
 
 }
 .newPassword-secction{
   position: absolute;
   display: flex;
-  width: 600px;
+  width: 37.5em;
   justify-content: space-between;
-  top: 320px;
+  top: 20em;
 }
 .newimg{
   position: absolute;
-  top: 90px;
+  top:  5.625em;
   flex-direction: row;
   }
   .imgInput{
-    width: 600px;
+    width: 37.5em;
   }
 .botton{
-  margin-top: 180px;
+  margin-top: 11em;
 }
