--- a/client/src/components/Dashboard/Dashboard.css
+++ b/client/src/components/Dashboard/Dashboard.css
@@ -271,6 +271,7 @@ a{
 }
 .dashboard-slider .slides p{
     font-size: 1.1rem;
+    background: transparent;
     font-weight: bold;
     padding: 5px 15px;
     color: var(--gray);
