Fix size page profile and review login

--- a/client/src/components/Profile/index.scss
+++ b/client/src/components/Profile/index.scss
@@ -58,7 +58,7 @@ $fontLight:GilroyLight;
 }
 .profileImgContainer{
   
-  padding-top: 2.5em;
+  // padding-top: 2.5em;
 }
 .profileImg{
   width: 16.25em;
