--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family:GilroyBold;
+    src: url('./assets/fuentes/Gilroy-Bold.ttf');
+}
