--- a/client/src/components/Bills/bills.scss
+++ b/client/src/components/Bills/bills.scss
@@ -1,15 +1,24 @@
+$colorAmarillo:#ffca40;
+$colorRojo:#c8161d;
+$simpleBlack:#000;
+$simpleGray:#d5d5d5;
+$simpleWhite:#F8f8f7;
+$fontNormal:Gilroy;
+$fontBold:GilroyBold;
+$fontLight:GilroyLight;
 @font-face {
-  font-family: Gilroy;
-  src: url("../../assets/fuentes/Gilroy-Regular.ttf");
+  font-family:Gilroy;
+  src: url('../../assets/fuentes/Gilroy-Regular.ttf');
 }
 @font-face {
-  font-family: GilroyBold;
-  src: url("../../assets/fuentes/Gilroy-Bold.ttf");
+  font-family:GilroyBold;
+  src: url('../../assets/fuentes/Gilroy-Bold.ttf');
 }
 @font-face {
-  font-family: GilroyLight;
-  src: url("../../assets/fuentes/Gilroy-Light.ttf");
+  font-family:GilroyLight;
+  src: url('../../assets/fuentes/Gilroy-Light.ttf');
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -160,7 +169,7 @@ a {
 .billContainer-header {
   width: 100%;
   display: flex;
-  margin: 30px 0;
+  margin: 10px 0;
   padding: 0 40px;
   align-items: center;
   justify-content: space-between;
@@ -190,7 +199,7 @@ a {
 
 .billCards {
   width: 100%;
-  height: 70vh;
+  height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -249,10 +258,10 @@ a {
   height: 100px;
   display: flex;
   justify-content: center;
-  padding-top: 30px;
-}
+  }
 
 .billSearchBar {
+  
   display: flex;
   gap: 30px;
   border-radius: 10px;
@@ -283,12 +292,13 @@ a {
 .billDetails {
   width: 800px;
   background-color: #ededed;
-  height: 100vh;
+  height: 90vh;
   right: 0;
   transition: 0.5s ease-in-out;
   z-index: 99;
   padding-top: 30px;
   box-shadow: -4px 3px 60px 3px hsla(0, 0%, 17%, 0.31);
+  border-radius: 1em;
   opacity: 1;
 }
 
@@ -376,3 +386,71 @@ a {
   margin: 0 auto;
   margin-top: 40px;
 }/*# sourceMappingURL=bills.css.map */
+
+.billBigBox{
+  display: flex;
+}
+.OrderViewsContainer{
+  transition: .1s ease-in;
+  display: flex;
+  align-items: center;
+  width: 33em;
+  height: 5em;
+  padding: 0 1em;
+  flex-direction: row;
+  justify-content: space-between;
+  color: #6c6c6c;
+  border-radius: 1em;
+  box-shadow: 2px 5px 10px 2px rgba(189, 186, 186, 0.2509803922);
+
+}
+.OrderViewsDectails{
+  display: flex;
+  gap: 1.5em;
+  
+}
+.led{
+  width: 0.8em;
+  height: 0.8em;
+  border-radius: 50%;
+ 
+  position: absolute;
+   left: 0;
+  // top: .3em;
+
+}
+.statusDectails{
+  width: 6em;
+  
+  padding-left: 1.6em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+.Active{
+  background-color: green;
+}
+.Desiable{
+  background-color: red;
+}
+.OrderViewsTitle{
+  font-size: 1.25em;
+  font-weight: bold;
+  font-family: $fontBold;
+  color: #000;
+}
+.OrderViewsTotalPrice{
+  font-size: 1.25em;
+  font-family: $fontBold;
+  color: #6c6c6c;
+}
+.orderContainerMap{
+  background-color: #ffca4072;
+  border-radius: 1em;
+  scale: 1.05;
+  // position: relative;
+  // top: -1px;
+  box-shadow: 2px 5px 10px 2px #969696cb;
+
+}
