--- a/client/src/components/Bills/bills.scss
+++ b/client/src/components/Bills/bills.scss
@@ -141,6 +141,7 @@ a {
 .userInfo-subTitle {
   font-family: GilroyLight;
   color: #808080;
+  min-width: 3em;
 }
 
 .userInfo-img-button {
@@ -519,4 +520,83 @@ a {
   width: 2.9em;
   display: flex;
   justify-content: center;
+}
+.newOrdersBotonContainer{
+  width: 9em;
+  height: 2.5em;
+  margin-left: .5em;
+  background-color: #969696cb;
+  border-radius: .9em;
+  display: flex;
+  align-items: center;
+  position: relative;
+  
+}
+.newOrdersBoton{
+  width: 5em;
+  height: 2.5em;
+  // border: 1px solid #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: .8em;
+  background-color: $colorAmarillo;
+  transition: .4s ease-in-out;
+  cursor: pointer;
+  position: absolute;
+  p{
+    color: white;
+  font-weight: bold;
+  font-family: $fontBold;
+    text-transform: uppercase;
+  }
+}
+.Local{
+  right: 4em;
+}
+.Delivery{ position: absolute;
+  right: 0em;
+  background-color: #823234;
+}
+.forCategory{
+  position: relative;
+}
+.filterArea{
+  z-index: 99;
+  width: 9.5em;
+  height: 0;
+  background-color: #aeadad0e;
+  position: absolute;
+  border-radius: .8em;
+  top: 1.5em;
+  left: .6em;
+  overflow: hidden;
+  transition: .4s ease-out;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.isvisible{
+  height: 17em;
+  background-color: #807c7cc3;
+}
+.filterBoton{
+  width: 8em;
+  height: 2em;
+  margin-top: .4em;
+  margin-bottom: .9em;
+  background-color: white;
+  padding-left: 1.2em;
+  border-radius: .8em;
+  text-transform: uppercase;
+  font-family: $fontBold;
+  padding-top: .3em;
+}
+.filterBoton:hover{
+  background-color: $colorAmarillo;
+  cursor: pointer;
+}
+.used{
+  background-color: #db6266;
+  color: white;
 }
