--- a/client/src/components/Bills/bills.scss
+++ b/client/src/components/Bills/bills.scss
@@ -209,14 +209,17 @@ a {
 }
 
 .billCards {
-  width: 100%;
-  height: 80vh;
+  width: 33em;
+  height: 60vh;
+  //background-color: #823234;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
   gap: 20px;
+  position: relative;
   overflow: auto;
   padding-top: 10px;
+  padding:  1.4em;
 }
 
 .billCards::-webkit-scrollbar {
@@ -409,7 +412,7 @@ a {
   transition: .1s ease-in;
   display: flex;
   align-items: center;
-  width: 33em;
+ 
   height: 5em;
   padding: 0 1em;
   flex-direction: row;
@@ -419,6 +422,12 @@ a {
   border-radius: 1em;
   box-shadow: 2px 5px 10px 2px rgba(189, 186, 186, 0.2509803922);
 }
+.OrderViewsActitve{
+  width: 28em;
+}
+.OrderViewsDesiable{
+  width: 24em;
+}
 .OrderViewsContainer:hover{
   cursor: pointer;
   background-color: #ffc940aa;
@@ -427,6 +436,7 @@ a {
 .OrderViewsDectails{
   display: flex;
   gap: 1.5em;
+  position: relative;
   
 }
 .led{
@@ -469,8 +479,10 @@ a {
   background-color: #ffc94089;
   border-radius: 1em;
   scale: 1.05;
+  
   // position: relative;
   // top: -1px;
+  display: flex;
   box-shadow: 2px 5px 10px 2px #969696cb;
 
 }
@@ -581,7 +593,7 @@ a {
   flex-direction: column;
 }
 .isvisible{
-  height: 17em;
+  height: auto;
   background-color: #807c7cc3;
 }
 .filterBoton{
@@ -603,4 +615,41 @@ a {
 .used{
   background-color: #db6266;
   color: white;
+}
+.newOrderNotificationArea{
+  display: flex;
+}
+.newOrderNotification{
+  margin-left: 2em;
+  display: flex;
+  align-items: center;
+  font-size: 1.1em;
+  font-family: $fontBold;
+}
+.ereaseButton{
+  position: absolute;
+  top: 0em;
+  right: 25em;
+  z-index: 10;
+  width: 3em;
+  height: 5em;
+  border-radius: 1em;
+  background-color: #6c6c6c50;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  }
+.ereaseButton:hover{
+  cursor: pointer;
+
+  box-shadow: 0px 2px 2px 1px rgba(76, 76, 76, 0.3098039216);
+
+}
+.ereaseButtonSvg{
+  width: 2.2em;
+  height: 2.2em;
+}
+.OrderViewsMainContainer{
+  position: relative;
+
 }
