--- a/client/src/components/Bills/bills.scss
+++ b/client/src/components/Bills/bills.scss
@@ -403,7 +403,7 @@ a {
   width: 80%;
   margin: 0 auto;
   margin-top: 40px;
-}/*# sourceMappingURL=bills.css.map */
+}
 
 .billBigBox{
   display: flex;
@@ -652,4 +652,34 @@ a {
 .OrderViewsMainContainer{
   position: relative;
 
+}
+.billmap{
+  
+  width: 600px;
+  height: 30.9em;
+}
+.tableContainer{
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: 1fr;
+  gap: 1em;
+  
+
+}
+.tableMap{
+  width: 3em;
+  height: 3em;
+  border-radius: .8em;
+  display: flex;
+  margin:  auto;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #000;
+  box-shadow: 0px 2px 2px 1px rgba(76, 76, 76, 0.3098039216);
+}
+.ocupated{
+  background-color: $colorRojo;
+  color: white;
 }
