--- a/client/src/components/Bills/bills.scss
+++ b/client/src/components/Bills/bills.scss
@@ -714,7 +714,7 @@ cursor: pointer;
 
 }
 .AddItemsView-containers{
-  background-color: #6c6c6ce6;
+  background-color: #d4d2d2;
   width: 40em;
   height: 40em;
   position: absolute;
@@ -732,12 +732,21 @@ display: block;
 .AddItemsView-info{
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 85%;
+  border: #000 dotted 1px;
   
 }
+.AddItemsView-title{
+  margin-left: 1em;
+  font-family: $fontBold;
+  font-size: 1.4em;
+  text-transform: uppercase;
+}
 .AddItemsView-boton{
+z-index: 999;
   position: absolute;
-  right: 0;
+  top: 1em;
+  right: 1em;
   width: 30px;
   height: 30px;
   background-color: $colorRojo;
@@ -755,5 +764,54 @@ display: block;
   cursor: pointer;
   transform: translateY(1px);
 box-shadow: none;
+}
+.AddItemsView-category-container{
+  display: flex;
+  width: 100%;
+  height: auto;
+  gap: 4px;
+  overflow: scroll;
   
+}
+.AddItemsView-selectArea{
+  margin-top: 3em;
+ 
+}
+
+.AddItemsView-category{
+  min-width: 100px;
+  height: 60px;
+  margin: 6px;
+  border-radius: 8px;
+  background-color: white;
+  border: #000 solid 1px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: .3s ease-in-out;
+}
+.AddItemsView-category:hover{
+  cursor: pointer;
+  box-shadow: 1px 2px 2px 1px #545454;
+}
+.AddItemsView-Items{
+  min-width:190px ;
+  display: flex;
+  gap: 1em;
+  width: auto;
+  padding: 0 1em;
+}
+.AddItemsView-text{
+  width: 300px;
+}
+.categorySelected{
+  background-color: $colorRojo;
+  color: white;
+  font-size: 1em;
+}
+.AddItemsView-Botones-Container{
+  width: 100%;
+  height: 6.4em;
+  display: flex;
+  align-items: center;
 }
